--- a/environment.yml
+++ b/environment.yml
@@ -3,50 +3,140 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - appnope=0.1.4=pyhd8ed1ab_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - brotli=1.1.0=hd74edd7_2
+  - brotli-bin=1.1.0=hd74edd7_2
   - bzip2=1.0.8=h99b78c6_7
   - ca-certificates=2024.8.30=hf0a4a13_0
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - contourpy=1.3.0=py311h25f83ee_2
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - debugpy=1.8.8=py311h155a34a_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.1.0=pyhd8ed1ab_0
+  - fonttools=4.54.1=py311h56c23cb_1
+  - freetype=2.12.1=hadb7bae_2
+  - importlib-metadata=8.5.0=pyha770c72_0
+  - ipykernel=6.29.5=pyh57ce528_0
+  - ipython=8.29.0=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.3=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - kiwisolver=1.4.7=py311h2c37856_0
+  - krb5=1.21.3=h237132a_0
+  - lcms2=2.16=ha0e7c42_0
+  - lerc=4.0.0=h9a09cb3_0
+  - libblas=3.9.0=25_osxarm64_openblas
+  - libbrotlicommon=1.1.0=hd74edd7_2
+  - libbrotlidec=1.1.0=hd74edd7_2
+  - libbrotlienc=1.1.0=hd74edd7_2
+  - libcblas=3.9.0=25_osxarm64_openblas
+  - libcxx=19.1.3=ha82da77_0
+  - libdeflate=1.22=hd74edd7_0
+  - libedit=3.1.20191231=hc8eb9b7_2
   - libexpat=2.6.4=h286801f_0
   - libffi=3.4.2=h3422bc3_5
+  - libgfortran=5.0.0=13_2_0_hd922786_3
+  - libgfortran5=13.2.0=hf226fd6_3
+  - libjpeg-turbo=3.0.0=hb547adb_1
+  - liblapack=3.9.0=25_osxarm64_openblas
+  - libopenblas=0.3.28=openmp_hf332438_1
+  - libpng=1.6.44=hc14010f_0
+  - libsodium=1.0.20=h99b78c6_0
   - libsqlite=3.47.0=hbaaea75_1
+  - libtiff=4.7.0=hfce79cd_1
+  - libwebp-base=1.4.0=h93a5062_0
+  - libxcb=1.17.0=hdb1d25a_0
   - libzlib=1.3.1=h8359307_2
+  - llvm-openmp=19.1.3=hb52a8e5_0
+  - matplotlib=3.9.2=py311ha1ab1f8_2
+  - matplotlib-base=3.9.2=py311hbe3227e_2
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.5=h7bae524_1
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - openjpeg=2.5.2=h9f1df11_0
   - openssl=3.3.2=h8359307_0
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
   - pip=24.3.1=pyh8b19718_0
+  - platformdirs=4.3.6=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_0
+  - psutil=6.1.0=py311hae2e1ce_0
+  - pthread-stubs=0.4=hd74edd7_1002
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - pyparsing=3.2.0=pyhd8ed1ab_1
   - python=3.11.6=h47c9636_0_cpython
+  - python_abi=3.11=5_cp311
+  - pyzmq=26.2.0=py311h730b646_3
+  - qhull=2020.2=h420ef59_5
   - readline=8.2=h92ec313_1
   - setuptools=75.3.0=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
   - tk=8.6.13=h5083fa2_1
-  - tzdata=2024b=hc8b5060_0
+  - tornado=6.4.1=py311h460d6c5_1
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - unicodedata2=15.1.0=py311hae2e1ce_1
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.44.0=pyhd8ed1ab_0
+  - xorg-libxau=1.0.11=hd74edd7_1
+  - xorg-libxdmcp=1.1.5=hd74edd7_0
   - xz=5.2.6=h57fd34a_0
+  - zeromq=4.3.5=h9f5b81c_6
+  - zipp=3.20.2=pyhd8ed1ab_0
+  - zstd=1.5.6=hb46c0d2_0
   - pip:
       - aiohappyeyeballs==2.4.3
       - aiohttp==3.10.10
       - aiosignal==1.3.1
+      - altair==5.4.1
       - annotated-types==0.7.0
       - anyio==4.6.2.post1
       - asgiref==3.8.1
       - attrs==24.2.0
       - backoff==2.2.1
       - bcrypt==4.2.0
+      - beautifulsoup4==4.12.3
+      - blinker==1.9.0
+      - blis==1.0.1
       - build==1.2.2.post1
       - cachetools==5.5.0
-      - certifi==2024.8.30
+      - catalogue==2.0.10
+      - cffi==1.17.1
+      - chardet==5.2.0
       - charset-normalizer==3.4.0
       - chroma-hnswlib==0.7.6
       - chromadb==0.5.18
       - click==8.1.7
+      - cloudpathlib==0.20.0
       - coloredlogs==15.0.1
+      - confection==0.1.5
+      - cryptography==43.0.3
+      - cymem==2.0.8
       - dataclasses-json==0.6.7
       - deprecated==1.2.14
       - distro==1.9.0
       - durationpy==0.9
+      - emoji==2.14.0
+      - es-core-news-sm==3.8.0
+      - eval-type-backport==0.2.0
       - fastapi==0.115.4
       - fastembed==0.4.1
       - filelock==3.16.1
+      - filetype==1.2.0
       - flatbuffers==24.3.25
       - frozenlist==1.5.0
       - fsspec==2024.10.0
+      - gitdb==4.0.11
+      - gitpython==3.1.43
       - google-auth==2.36.0
       - googleapis-common-protos==1.65.0
       - grpcio==1.67.1
@@ -54,6 +144,7 @@ dependencies:
       - h11==0.14.0
       - h2==4.1.0
       - hpack==4.0.0
+      - html5lib==1.1
       - httpcore==1.0.6
       - httptools==0.6.4
       - httpx==0.27.2
@@ -62,13 +153,15 @@ dependencies:
       - humanfriendly==10.0
       - hyperframe==6.0.1
       - idna==3.10
-      - importlib-metadata==8.5.0
       - importlib-resources==6.4.5
       - jinja2==3.1.4
       - jiter==0.7.0
       - joblib==1.4.2
       - jsonpatch==1.33
+      - jsonpath-python==1.0.6
       - jsonpointer==3.0.0
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2024.10.1
       - kubernetes==31.0.0
       - langchain==0.3.7
       - langchain-chroma==0.1.4
@@ -79,8 +172,14 @@ dependencies:
       - langchain-openai==0.2.6
       - langchain-qdrant==0.2.0
       - langchain-text-splitters==0.3.2
+      - langcodes==3.4.1
+      - langdetect==1.0.9
       - langsmith==0.1.142
+      - language-data==1.2.0
       - loguru==0.7.2
+      - lxml==5.3.0
+      - marisa-trie==1.2.1
+      - markdown==3.7
       - markdown-it-py==3.0.0
       - markupsafe==3.0.2
       - marshmallow==3.23.1
@@ -89,10 +188,14 @@ dependencies:
       - monotonic==1.6
       - mpmath==1.3.0
       - multidict==6.1.0
+      - murmurhash==1.0.10
       - mypy-extensions==1.0.0
+      - narwhals==1.13.3
       - networkx==3.4.2
-      - numpy==1.26.4
+      - nltk==3.9.1
+      - numpy==2.0.2
       - oauthlib==3.2.2
+      - olefile==0.47
       - ollama==0.3.3
       - onnx==1.17.0
       - onnxruntime==1.20.0
@@ -110,58 +213,82 @@ dependencies:
       - orjson==3.10.11
       - overrides==7.7.0
       - packaging==24.2
+      - pandas==2.2.3
       - pillow==10.4.0
       - portalocker==2.10.1
       - posthog==3.7.0
+      - preshed==3.0.9
       - propcache==0.2.0
       - protobuf==5.28.3
       - py-rust-stemmers==0.1.3
+      - pyarrow==18.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
+      - pycparser==2.22
       - pydantic==2.9.2
       - pydantic-core==2.23.4
       - pydantic-settings==2.6.1
-      - pygments==2.18.0
+      - pydeck==0.9.1
       - pypdf==5.1.0
       - pypika==0.48.9
       - pyproject-hooks==1.2.0
-      - python-dateutil==2.9.0.post0
+      - python-dateutil==2.8.2
       - python-dotenv==1.0.1
+      - python-iso639==2024.10.22
+      - python-magic==0.4.27
+      - python-oxmsg==0.0.1
+      - pytz==2024.2
       - pyyaml==6.0.2
       - qdrant-client==1.12.1
+      - rapidfuzz==3.10.1
+      - referencing==0.35.1
       - regex==2024.11.6
       - requests==2.32.3
       - requests-oauthlib==2.0.0
       - requests-toolbelt==1.0.0
       - rich==13.9.4
+      - rpds-py==0.21.0
       - rsa==4.9
       - safetensors==0.4.5
       - scikit-learn==1.5.2
       - scipy==1.14.1
       - sentence-transformers==3.2.1
       - shellingham==1.5.4
-      - six==1.16.0
+      - smart-open==7.0.5
+      - smmap==5.0.1
       - sniffio==1.3.1
+      - soupsieve==2.6
+      - spacy==3.8.2
+      - spacy-legacy==3.0.12
+      - spacy-loggers==1.0.5
       - sqlalchemy==2.0.35
+      - srsly==2.4.8
       - starlette==0.41.2
+      - streamlit==1.40.0
       - sympy==1.13.1
       - tenacity==9.0.0
+      - thinc==8.3.2
       - threadpoolctl==3.5.0
       - tiktoken==0.8.0
       - tokenizers==0.20.3
+      - toml==0.10.2
       - torch==2.5.1
       - tqdm==4.67.0
       - transformers==4.46.2
       - typer==0.13.0
-      - typing-extensions==4.12.2
       - typing-inspect==0.9.0
+      - tzdata==2024.2
+      - unstructured==0.16.5
+      - unstructured-client==0.27.0
       - urllib3==2.2.3
       - uvicorn==0.32.0
       - uvloop==0.21.0
+      - wasabi==1.1.3
       - watchfiles==0.24.0
+      - weasel==0.4.1
+      - webencodings==0.5.1
       - websocket-client==1.8.0
       - websockets==13.1
       - wrapt==1.16.0
       - yarl==1.17.1
-      - zipp==3.20.2
 prefix: /Users/marcofura/anaconda3/envs/actividad_1
