--- a/environment.yml
+++ b/environment.yml
@@ -3,96 +3,96 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.4=pyhd8ed1ab_0
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - brotli=1.1.0=hd74edd7_2
-  - brotli-bin=1.1.0=hd74edd7_2
-  - bzip2=1.0.8=h99b78c6_7
-  - ca-certificates=2024.8.30=hf0a4a13_0
-  - certifi=2024.8.30=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.3.0=py311h25f83ee_2
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - debugpy=1.8.8=py311h155a34a_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_0
-  - executing=2.1.0=pyhd8ed1ab_0
-  - fonttools=4.54.1=py311h56c23cb_1
-  - freetype=2.12.1=hadb7bae_2
-  - importlib-metadata=8.5.0=pyha770c72_0
-  - ipykernel=6.29.5=pyh57ce528_0
-  - ipython=8.29.0=pyh707e725_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jupyter_client=8.6.3=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - kiwisolver=1.4.7=py311h2c37856_0
-  - krb5=1.21.3=h237132a_0
-  - lcms2=2.16=ha0e7c42_0
-  - lerc=4.0.0=h9a09cb3_0
-  - libblas=3.9.0=25_osxarm64_openblas
-  - libbrotlicommon=1.1.0=hd74edd7_2
-  - libbrotlidec=1.1.0=hd74edd7_2
-  - libbrotlienc=1.1.0=hd74edd7_2
-  - libcblas=3.9.0=25_osxarm64_openblas
-  - libcxx=19.1.3=ha82da77_0
-  - libdeflate=1.22=hd74edd7_0
-  - libedit=3.1.20191231=hc8eb9b7_2
-  - libexpat=2.6.4=h286801f_0
-  - libffi=3.4.2=h3422bc3_5
-  - libgfortran=5.0.0=13_2_0_hd922786_3
-  - libgfortran5=13.2.0=hf226fd6_3
-  - libjpeg-turbo=3.0.0=hb547adb_1
-  - liblapack=3.9.0=25_osxarm64_openblas
-  - libopenblas=0.3.28=openmp_hf332438_1
-  - libpng=1.6.44=hc14010f_0
-  - libsodium=1.0.20=h99b78c6_0
-  - libsqlite=3.47.0=hbaaea75_1
-  - libtiff=4.7.0=hfce79cd_1
-  - libwebp-base=1.4.0=h93a5062_0
-  - libxcb=1.17.0=hdb1d25a_0
-  - libzlib=1.3.1=h8359307_2
-  - llvm-openmp=19.1.3=hb52a8e5_0
-  - matplotlib=3.9.2=py311ha1ab1f8_2
-  - matplotlib-base=3.9.2=py311hbe3227e_2
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.5=h7bae524_1
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openjpeg=2.5.2=h9f1df11_0
-  - openssl=3.3.2=h8359307_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pip=24.3.1=pyh8b19718_0
-  - platformdirs=4.3.6=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.48=pyha770c72_0
-  - psutil=6.1.0=py311hae2e1ce_0
-  - pthread-stubs=0.4=hd74edd7_1002
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
-  - pygments=2.18.0=pyhd8ed1ab_0
-  - pyparsing=3.2.0=pyhd8ed1ab_1
-  - python=3.11.6=h47c9636_0_cpython
-  - python_abi=3.11=5_cp311
-  - pyzmq=26.2.0=py311h730b646_3
-  - qhull=2020.2=h420ef59_5
-  - readline=8.2=h92ec313_1
-  - setuptools=75.3.0=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.13=h5083fa2_1
-  - tornado=6.4.1=py311h460d6c5_1
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
-  - unicodedata2=15.1.0=py311hae2e1ce_1
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.44.0=pyhd8ed1ab_0
-  - xorg-libxau=1.0.11=hd74edd7_1
-  - xorg-libxdmcp=1.1.5=hd74edd7_0
-  - xz=5.2.6=h57fd34a_0
-  - zeromq=4.3.5=h9f5b81c_6
-  - zipp=3.20.2=pyhd8ed1ab_0
-  - zstd=1.5.6=hb46c0d2_0
+  - appnope=0.1.4
+  - asttokens=2.4.1
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
+  - bzip2=1.0.8
+  - ca-certificates=2024.8.30
+  - certifi=2024.8.30
+  - comm=0.2.2
+  - contourpy=1.3.0
+  - cycler=0.12.1
+  - debugpy=1.8.8
+  - decorator=5.1.1
+  - exceptiongroup=1.2.2
+  - executing=2.1.0
+  - fonttools=4.54.1
+  - freetype=2.12.1
+  - importlib-metadata=8.5.0
+  - ipykernel=6.29.5
+  - ipython=8.29.0
+  - jedi=0.19.1
+  - jupyter_client=8.6.3
+  - jupyter_core=5.7.2
+  - kiwisolver=1.4.7
+  - krb5=1.21.3
+  - lcms2=2.16
+  - lerc=4.0.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
+  - libcblas=3.9.0
+  - libcxx=19.1.3
+  - libdeflate=1.22
+  - libedit=3.1.20191231
+  - libexpat=2.6.4
+  - libffi=3.4.2
+  - libgfortran=5.0.0
+  - libgfortran5=13.2.0
+  - libjpeg-turbo=3.0.0
+  - liblapack=3.9.0
+  - libopenblas=0.3.28
+  - libpng=1.6.44
+  - libsodium=1.0.20
+  - libsqlite=3.47.0
+  - libtiff=4.7.0
+  - libwebp-base=1.4.0
+  - libxcb=1.17.0
+  - libzlib=1.3.1
+  - llvm-openmp=19.1.3
+  - matplotlib=3.9.2
+  - matplotlib-base=3.9.2
+  - matplotlib-inline=0.1.7
+  - munkres=1.1.4
+  - ncurses=6.5
+  - nest-asyncio=1.6.0
+  - openjpeg=2.5.2
+  - openssl=3.3.2
+  - parso=0.8.4
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pip=24.3.1
+  - platformdirs=4.3.6
+  - prompt-toolkit=3.0.48
+  - psutil=6.1.0
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pygments=2.18.0
+  - pyparsing=3.2.0
+  - python=3.11.6
+  - python_abi=3.11
+  - pyzmq=26.2.0
+  - qhull=2020.2
+  - readline=8.2
+  - setuptools=75.3.0
+  - six=1.16.0
+  - stack_data=0.6.2
+  - tk=8.6.13
+  - tornado=6.4.1
+  - traitlets=5.14.3
+  - typing_extensions=4.12.2
+  - unicodedata2=15.1.0
+  - wcwidth=0.2.13
+  - wheel=0.44.0
+  - xorg-libxau=1.0.11
+  - xorg-libxdmcp=1.1.5
+  - xz=5.2.6
+  - zeromq=4.3.5
+  - zipp=3.20.2
+  - zstd=1.5.6
   - pip:
       - aiohappyeyeballs==2.4.3
       - aiohttp==3.10.10
