--- a/environment.yml
+++ b/environment.yml
@@ -111,6 +111,7 @@ dependencies:
       - cachetools==5.5.0
       - catalogue==2.0.10
       - cffi==1.17.1
+      - cfgv==3.4.0
       - chardet==5.2.0
       - charset-normalizer==3.4.0
       - chroma-hnswlib==0.7.6
@@ -123,6 +124,7 @@ dependencies:
       - cymem==2.0.8
       - dataclasses-json==0.6.7
       - deprecated==1.2.14
+      - distlib==0.3.9
       - distro==1.9.0
       - durationpy==0.9
       - emoji==2.14.0
@@ -153,6 +155,7 @@ dependencies:
       - huggingface-hub==0.26.2
       - humanfriendly==10.0
       - hyperframe==6.0.1
+      - identify==2.6.2
       - idna==3.10
       - importlib-resources==6.4.5
       - jinja2==3.1.4
@@ -190,10 +193,12 @@ dependencies:
       - mpmath==1.3.0
       - multidict==6.1.0
       - murmurhash==1.0.10
+      - mypy==1.13.0
       - mypy-extensions==1.0.0
       - narwhals==1.13.3
       - networkx==3.4.2
       - nltk==3.9.1
+      - nodeenv==1.9.1
       - numpy==2.0.2
       - oauthlib==3.2.2
       - olefile==0.47
@@ -218,6 +223,7 @@ dependencies:
       - pillow==10.4.0
       - portalocker==2.10.1
       - posthog==3.7.0
+      - pre-commit==4.0.1
       - preshed==3.0.9
       - propcache==0.2.0
       - protobuf==5.28.3
@@ -250,6 +256,7 @@ dependencies:
       - rich==13.9.4
       - rpds-py==0.21.0
       - rsa==4.9
+      - ruff==0.8.0
       - safetensors==0.4.5
       - scikit-learn==1.5.2
       - scipy==1.14.1
@@ -284,6 +291,7 @@ dependencies:
       - urllib3==2.2.3
       - uvicorn==0.32.0
       - uvloop==0.21.0
+      - virtualenv==20.27.1
       - wasabi==1.1.3
       - watchfiles==0.24.0
       - weasel==0.4.1
