--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.1
 altair==5.4.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+appdirs==1.4.4
 appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
 asgiref==3.8.1
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
@@ -18,6 +19,7 @@ cachetools==5.5.0
 catalogue==2.0.10
 certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
 cffi==1.17.1
+cfgv==3.4.0
 chardet==5.2.0
 charset-normalizer==3.4.0
 chroma-hnswlib==0.7.6
@@ -32,12 +34,16 @@ cryptography==43.0.3
 cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1696677705766/work
 cymem==2.0.8
 dataclasses-json==0.6.7
+datasets==3.1.0
 debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1731044930113/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
 Deprecated==1.2.14
+dill==0.3.8
+distlib==0.3.9
 distro==1.9.0
 durationpy==0.9
 emoji==2.14.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12
 eval_type_backport==0.2.0
 exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
@@ -49,7 +55,7 @@ filetype==1.2.0
 flatbuffers==24.3.25
 fonttools @ file:///Users/runner/miniforge3/conda-bld/fonttools_1729530362764/work
 frozenlist==1.5.0
-fsspec==2024.10.0
+fsspec==2024.9.0
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.36.0
@@ -67,6 +73,7 @@ httpx-sse==0.4.0
 huggingface-hub==0.26.2
 humanfriendly==10.0
 hyperframe==6.0.1
+identify==2.6.2
 idna==3.10
 importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
 importlib_resources==6.4.5
@@ -112,14 +119,17 @@ mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
+multiprocess==0.70.16
 munkres==1.1.4
 murmurhash==1.0.10
+mypy==1.13.0
 mypy-extensions==1.0.0
 narwhals==1.13.3
 nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
 networkx==3.4.2
 nltk==3.9.1
-numpy==2.0.2
+nodeenv==1.9.1
+numpy==1.26.4
 oauthlib==3.2.2
 olefile==0.47
 ollama==0.3.3
@@ -147,6 +157,7 @@ pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1729065715655/work
 platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
 portalocker==2.10.1
 posthog==3.7.0
+pre_commit==4.0.1
 preshed==3.0.9
 prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
 propcache==0.2.0
@@ -168,6 +179,7 @@ pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_17288804
 pypdf==5.1.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
+pysbd==0.3.4
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-iso639==2024.10.22
@@ -177,15 +189,18 @@ pytz==2024.2
 PyYAML==6.0.2
 pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1728642247211/work
 qdrant-client==1.12.1
+ragas==0.2.6
 RapidFuzz==3.10.1
 referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rerankers==0.6.1
 rich==13.9.4
 rpds-py==0.21.0
 rsa==4.9
+ruff==0.8.0
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -226,6 +241,7 @@ unstructured-client==0.27.0
 urllib3==2.2.3
 uvicorn==0.32.0
 uvloop==0.21.0
+virtualenv==20.27.1
 wasabi==1.1.3
 watchfiles==0.24.0
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
@@ -234,5 +250,6 @@ webencodings==0.5.1
 websocket-client==1.8.0
 websockets==13.1
 wrapt==1.16.0
+xxhash==3.5.0
 yarl==1.17.1
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work
