--- a/environment.yml
+++ b/environment.yml
@@ -100,6 +100,7 @@ dependencies:
       - altair==5.4.1
       - annotated-types==0.7.0
       - anyio==4.6.2.post1
+      - appdirs==1.4.4
       - asgiref==3.8.1
       - attrs==24.2.0
       - backoff==2.2.1
@@ -123,7 +124,9 @@ dependencies:
       - cryptography==43.0.3
       - cymem==2.0.8
       - dataclasses-json==0.6.7
+      - datasets==3.1.0
       - deprecated==1.2.14
+      - dill==0.3.8
       - distlib==0.3.9
       - distro==1.9.0
       - durationpy==0.9
@@ -137,7 +140,7 @@ dependencies:
       - filetype==1.2.0
       - flatbuffers==24.3.25
       - frozenlist==1.5.0
-      - fsspec==2024.10.0
+      - fsspec==2024.9.0
       - gitdb==4.0.11
       - gitpython==3.1.43
       - google-auth==2.36.0
@@ -192,6 +195,7 @@ dependencies:
       - monotonic==1.6
       - mpmath==1.3.0
       - multidict==6.1.0
+      - multiprocess==0.70.16
       - murmurhash==1.0.10
       - mypy==1.13.0
       - mypy-extensions==1.0.0
@@ -199,7 +203,7 @@ dependencies:
       - networkx==3.4.2
       - nltk==3.9.1
       - nodeenv==1.9.1
-      - numpy==2.0.2
+      - numpy==1.26.4
       - oauthlib==3.2.2
       - olefile==0.47
       - ollama==0.3.3
@@ -239,7 +243,8 @@ dependencies:
       - pypdf==5.1.0
       - pypika==0.48.9
       - pyproject-hooks==1.2.0
-      - python-dateutil==2.9.0.post0
+      - pysbd==0.3.4
+      - python-dateutil==2.8.2
       - python-dotenv==1.0.1
       - python-iso639==2024.10.22
       - python-magic==0.4.27
@@ -247,12 +252,14 @@ dependencies:
       - pytz==2024.2
       - pyyaml==6.0.2
       - qdrant-client==1.12.1
+      - ragas==0.2.6
       - rapidfuzz==3.10.1
       - referencing==0.35.1
       - regex==2024.11.6
       - requests==2.32.3
       - requests-oauthlib==2.0.0
       - requests-toolbelt==1.0.0
+      - rerankers==0.6.1
       - rich==13.9.4
       - rpds-py==0.21.0
       - rsa==4.9
@@ -299,5 +306,6 @@ dependencies:
       - websocket-client==1.8.0
       - websockets==13.1
       - wrapt==1.16.0
+      - xxhash==3.5.0
       - yarl==1.17.1
 prefix: /Users/marcofura/anaconda3/envs/actividad_1
